--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,7 @@
 # Welcome to Jekyll!
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you: 
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
+
 # Site settings
 # These are used to personalize your new site. If you look in the HTML files,
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
@@ -14,10 +10,15 @@
 
 title: Smartarkivering
 email: stadsarkiv@aarhus.dk
-description: >- # this means to ignore newlines until "baseurl:"
+description: >-
   Smartarkivering lader alle borgere uploade filer, som de ønsker
   at aflevere til et af de offentlige arkiver, der er tilmeldt
   tjenesten.
+
+domain: aarhusstadsarkiv.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
+url: https://aarhusstadsarkiv.github.io  # the base hostname and protocol for your site, e.g. http://example.com
+# baseurl: /smartarkivering/               # place folder name if the site is served in a subfolder
+
 
 # Exclude from processing.
 exclude:
