--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ description: >-
   tjenesten.
 
 domain: aarhusstadsarkiv.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
-url: https://aarhusstadsarkiv.github.io  # the base hostname and protocol for your site, e.g. http://example.com
+url: https://aarhusstadsarkiv.github.io/smartarkivering  # the base hostname and protocol for your site, e.g. http://example.com
 # baseurl: /smartarkivering/               # place folder name if the site is served in a subfolder
 
 
